- Added React Router package - Added arrowDown and arrowRight assets - Edited header component slightly, spacing issues - Added Home page

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -4,19 +4,19 @@
 }
 
 .pageHeaderButtons {
-    padding: 20px 20px 20px 20px;
+    padding: 30px 20px 20px 20px;
     float: right;
 }
 
 .buttons {
-    padding: 20px 20px 20px 20px;
+    padding: 30px 20px 20px 20px;
     float: right; 
 }
 
 .buttons a {
     text-decoration: none;
     color: black;
-    padding-right: 15px;
+    padding-left: 40px;
     font-weight: bold;
 }
 
